# mist

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mist/example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bundle.dbc  bundle.drop  hello.dbc  hello.drop
app/src/main/cpp/: CMakeLists.txt  droplet_platform_api.cpp  droplet_vm_wrapper.cpp  droplet_vm_wrapper.h  native-lib.cpp  native_bridge.cpp
app/src/main/cpp/droplet/compiler/: CodeGenerator.cpp  CodeGenerator.h  Expr.h  Lexer.cpp  Lexer.h  ModuleLoader.cpp  ModuleLoader.h  Parser.cpp  Parser.h  Program.h  Stmt.h  TypeChecker.cpp  TypeChecker.h
app/src/main/cpp/droplet/debugger/: Debugger.cpp  Debugger.h
app/src/main/cpp/droplet/native/: Native.cpp  Native.h
app/src/main/cpp/droplet/tests/: GC_test.h  Lexer_test.h  Value_obj_test.h
app/src/main/cpp/droplet/vm/: Allocator.cpp  Allocator.h  CallFrame.cpp  CallFrame.h  DBC_helper.cpp  DBC_helper.h  FFIHelper.cpp  FFIHelper.h  Function.h  GC.cpp  GC.h  Loader.cpp  Loader.h  Object.h  StackManager.cpp  StackManager.h  VM.cpp  VM.h  Value.cpp  Value.h  defines.h
app/src/main/cpp/registries/: AndroidNative.cpp  AndroidNative.h  AndroidRegistries.h
app/src/main/java/com/mist/example/: DropletVm.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mist/example/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
